Adds basic view stuff

--- a/TeamSauce/TeamSauce.csproj
+++ b/TeamSauce/TeamSauce.csproj
@@ -444,6 +444,11 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
+    <Content Include="Views\Home\_Graphs.cshtml" />
+    <Content Include="Views\Home\_HackInformation.cshtml" />
+    <Content Include="Views\Home\_TeamChat.cshtml" />
+    <Content Include="Views\Home\_Activity.cshtml" />
+    <Content Include="Views\Home\_SponsorChat.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
