--- a/TeamSauce/TeamSauce.csproj
+++ b/TeamSauce/TeamSauce.csproj
@@ -136,8 +136,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Hubs\QuestionConnection.cs" />
-    <Compile Include="Models\QuestionRequestModel.cs" />
+    <Compile Include="Hubs\ChatConnection.cs" />
+    <Compile Include="Models\ChatData.cs" />
     <Compile Include="OwinStartupClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TeamSauce.cs" />
@@ -148,6 +148,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="Global.asax" />
     <None Include="Scripts\jquery-1.6.4-vsdoc.js" />
+    <Content Include="Scripts\ChatR.js" />
     <Content Include="Scripts\jquery-1.6.4.js" />
     <Content Include="Scripts\jquery-1.6.4.min.js" />
     <Content Include="Scripts\jquery.signalR-2.0.0.js" />
@@ -162,6 +163,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\Web.config" />
+    <Content Include="Views\Home\Chat.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
