--- a/TeamSauce/packages.config
+++ b/TeamSauce/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.Bootstrap" version="0.6.0" targetFramework="net45" />
   <package id="angularjs" version="1.2.0-RC3" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
