--- a/TeamSauce/TeamSauce.csproj
+++ b/TeamSauce/TeamSauce.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -138,8 +139,11 @@
     </Compile>
     <Compile Include="Hubs\ChatConnection.cs" />
     <Compile Include="Models\ChatData.cs" />
+    <Compile Include="Connections\TeamChatConnection\Data\TeamChatPost.cs" />
+    <Compile Include="Connections\TeamChatConnection\Data\TeamChatResponse.cs" />
     <Compile Include="OwinStartupClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Connections\TeamChatConnection\TeamChatConnection.cs" />
     <Compile Include="TeamSauce.cs" />
   </ItemGroup>
   <ItemGroup>
