--- a/TeamSauce/TeamSauce.csproj
+++ b/TeamSauce/TeamSauce.csproj
@@ -140,10 +140,13 @@
     <Compile Include="Hubs\ChatConnection.cs" />
     <Compile Include="Models\ChatData.cs" />
     <Compile Include="Connections\TeamChatConnection\Data\TeamChatPost.cs" />
-    <Compile Include="Connections\TeamChatConnection\Data\TeamChatResponse.cs" />
+    <Compile Include="Connections\TeamChatConnection\Data\TeamChatMessage.cs" />
     <Compile Include="OwinStartupClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Connections\TeamChatConnection\TeamChatConnection.cs" />
+    <Compile Include="ServiceFactory.cs" />
+    <Compile Include="Services\Interfaces\ITeamChatMessageService.cs" />
+    <Compile Include="Services\MockTeamChatMessageService.cs" />
     <Compile Include="TeamSauce.cs" />
   </ItemGroup>
   <ItemGroup>
