--- a/TeamSauce/TeamSauce.csproj
+++ b/TeamSauce/TeamSauce.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Hubs\SponsorChatHub.cs" />
     <Compile Include="Hubs\UsersHub.cs" />
     <Compile Include="Hubs\Questionnaire\QuestionnaireHub.cs" />
     <Compile Include="Controllers\QueController.cs" />
@@ -149,15 +150,20 @@
     <Compile Include="Models\ChatData.cs" />
     <Compile Include="Connections\TeamChatConnection\Data\TeamChatPost.cs" />
     <Compile Include="Connections\TeamChatConnection\Data\TeamChatMessage.cs" />
+    <Compile Include="Models\Factories\ISponsorMessageModelFactory.cs" />
+    <Compile Include="Models\Factories\SponsorMessageModelFactory.cs" />
     <Compile Include="Models\LoginModel.cs" />
+    <Compile Include="Models\SponsorMessageModel.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="OwinStartupClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Connections\TeamChatConnection\TeamChatConnection.cs" />
     <Compile Include="ServiceFactory.cs" />
     <Compile Include="Services\Interfaces\IQuestionsService.cs" />
+    <Compile Include="Services\Interfaces\ISponsorMessageService.cs" />
     <Compile Include="Services\Interfaces\ITeamChatMessageService.cs" />
     <Compile Include="Services\Interfaces\IUserService.cs" />
+    <Compile Include="Services\SponsorMessageService.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\MockTeamChatMessageService.cs" />
     <Compile Include="TeamSauce.cs" />
