--- a/TeamSauce/TeamSauce.csproj
+++ b/TeamSauce/TeamSauce.csproj
@@ -183,6 +183,10 @@
     <Content Include="cancel-off.png" />
     <Content Include="cancel-on.png" />
     <Content Include="Content\site.css" />
+    <Content Include="Scripts\moment-with-langs.js" />
+    <Content Include="Scripts\moment-with-langs.min.js" />
+    <Content Include="Scripts\moment.js" />
+    <Content Include="Scripts\moment.min.js" />
     <Content Include="star-half.png" />
     <Content Include="star-off.png" />
     <Content Include="star-on.png" />
