--- a/TeamSauce/packages.config
+++ b/TeamSauce/packages.config
@@ -23,4 +23,6 @@
   <package id="Moment.js" version="2.3.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Pnotify" version="1.2.2" targetFramework="net45" />
+  <package id="Twitter.Bootstrap" version="2.3.2" targetFramework="net45" />
 </packages>
