--- a/TeamSauce/TeamSauce.csproj
+++ b/TeamSauce/TeamSauce.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Hubs\GraphHub.cs" />
     <Compile Include="Hubs\SponsorChatHub.cs" />
     <Compile Include="Hubs\TeamSauceHub.cs" />
     <Compile Include="Controllers\CatController.cs" />
@@ -160,10 +161,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Connections\TeamChatConnection\TeamChatConnection.cs" />
     <Compile Include="ServiceFactory.cs" />
+    <Compile Include="Services\Interfaces\IQuestionnaireResultService.cs" />
     <Compile Include="Services\Interfaces\IQuestionsService.cs" />
     <Compile Include="Services\Interfaces\ISponsorMessageService.cs" />
     <Compile Include="Services\Interfaces\ITeamChatMessageService.cs" />
     <Compile Include="Services\Interfaces\IUserService.cs" />
+    <Compile Include="Services\QuestionnaireResultsService.cs" />
     <Compile Include="Services\SponsorMessageService.cs" />
     <Compile Include="Services\SponsorMessageTransformer.cs" />
     <Compile Include="Services\UserService.cs" />
