--- a/TeamSauce/TeamSauce.csproj
+++ b/TeamSauce/TeamSauce.csproj
@@ -144,7 +144,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Hubs\SponsorChatHub.cs" />
-    <Compile Include="Hubs\TeamChatHub.cs" />
     <Compile Include="Hubs\TeamSauceHub.cs" />
     <Compile Include="Controllers\CatController.cs" />
     <Compile Include="Models\CategoryQuestion.cs" />
@@ -249,6 +248,7 @@
     <Content Include="Views\Cat\Index.cshtml" />
     <Content Include="Views\Home\_loginArea.cshtml" />
     <Content Include="Views\Home\Sponsor.cshtml" />
+    <Content Include="Views\Home\_TeamChat2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
